2013-06-03  Christian Weiske  <christian.weiske@netresearch.de>

	* Add TYPO3 dependency to ext_emconf
	* Add Changelog
	* Fix icon for TYPO3 4.x
	* Version 0.2.1

2013-05-31  Christian Weiske  <christian.weiske@netresearch.de>

	* First public release
	* Version 0.2.0