@@ -1,3 +1,8 @@
+2013-07-21  Rico Sonntag  <rico.sonntag@netresearch.de>
+
+	* Fix fatal error in frontend plugin when geoip extension
+	  is not available
+
 2013-06-03  Christian Weiske  <christian.weiske@netresearch.de>
 
 	* Add TYPO3 dependency to ext_emconf
